[package]
name = "dna"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.5", features = ["derive"] }
toml = "0.5.8"
serde_derive = "1.0.133"
serde = "1.0.133"
nums = {path = "../Nums"}
execute = "0.2.9"